--- a/navigation.css
+++ b/navigation.css
@@ -64,7 +64,7 @@
   color:var(--pill-text);
   text-decoration:none;
   border-radius:6px;
-  transition: all .5s ease;
+  /* transition: all .5s ease; */
 }
 .ss-menu .ss-link:hover{   
     background:var(--pill);
@@ -79,9 +79,10 @@
 
 /* Actions (right icons) */
 .ss-actions{
-  display:flex; align-items:center; gap:10px;
+  display:flex; 
+  align-items:center; 
+  gap:10px;
 }
-
 /* .ss-icon-btn{
   width:40px;
   height:40px;
@@ -115,10 +116,11 @@
   overflow:hidden; 
   white-space:nowrap;
 
-  transition:
-    all .5s ease
+  transition: background .15s, border-color .15s, box-shadow .2s, color .15s;
+    /* all .5s ease; */
     /* background .15s, border-color .15s, box-shadow .2s; */
 }
+
 .ss-actions .ss-pill-long-btn{
   --collapsed: 40px;
   --expanded: 260px;
@@ -136,9 +138,10 @@
   cursor:pointer; 
   overflow:hidden; 
   white-space:nowrap;
+  transition: background .15s, border-color .15s, box-shadow .2s, color .15s;
 
-  transition:
-    all .5s ease;
+  /* transition: */
+    /* all .5s ease; */
 }
 .ss-pill-btn .icon, .ss-pill-long-btn .icon{ display:grid; place-items:center; flex:0 0 auto; }
 .ss-pill-btn .label, .ss-pill-long-btn .label{
@@ -158,7 +161,7 @@
 .ss-pill-btn:focus-visible,
 .ss-pill-long-btn:hover,
 .ss-pill-long-btn:focus-visible {
-  width: var(--expanded);
+  /* width: var(--expanded); */
   background: #ffffff05;
   border-color: #595f6b;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .06);
@@ -171,22 +174,10 @@
   opacity: 1;
   transform: none;
 }
-/* 
-@media (max-width:540px){
-  .ss-pill-btn{ --expanded: 140px; }
-}
 
-@media (max-width: 860px){
-  .ss-menu { gap:10px; }
-  .ss-link { padding:6px 10px; font-size:12px; }
-}
-@media (max-width: 640px){
-  .ss-logo { display:none; }
-  .ss-topbar{ gap:12px; }
-} */
 .ss-pill-btn.is-open,
 .ss-pill-long-btn.is-open{
-    width: var(--expanded);
+    /* width: var(--expanded); */
     background:#ffffff05;
     border-color:#595f6b;
     box-shadow:inset 0 0 0 1px rgba(255,255,255,.06);
@@ -194,14 +185,4 @@
 .ss-pill-btn.is-open .label,
 .ss-pill-long-btn.is-open .label{
     opacity:1; transform:none;
-}
-.ss-icon-btn{
-  transition: all .5s ease;
-}
-.ss-pill-btn{
-  will-change: width;
-  transition: all .5s ease; 
-}
-.ss-pill-btn .label{
-  transition:   all .5s ease;
 }
