Mix htmlmesh and htmlembed

--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,7 @@
     margin-bottom: 10px;
 }
 .form-item input { 
-    padding-right: 10px;
+    /* padding-right: 10px; */
 }
 .form-item input[type="radio"]:checked {
     background-color: #3636E3;
